# Patterns

./: CMakeLists.txt  ClassDiagram.drawio  Description.txt  README.md  main.cpp
factories/: EmpireUnitFactory.cpp  EmpireUnitFactory.h  FederationUnitFactory.cpp  FederationUnitFactory.h  UnitFactory.cpp  UnitFactory.h
playing field/: PlayingFieldProxy.h
playing_field/: Colony.cpp  Colony.h  ColonyAndPlayingFieldInterface.cpp  ColonyAndPlayingFieldInterface.h  ColonyProxy.cpp  ColonyProxy.h  PlayingField.cpp  PlayingField.h  PlayingFieldProxy.cpp
units/: EmpireFrigate.cpp  EmpireFrigate.h  EmpireMine.cpp  EmpireMine.h  EmpireTurret.cpp  EmpireTurret.h  FederationFrigate.cpp  FederationFrigate.h  FederationMine.cpp  FederationMine.h  FederationTurret.cpp  FederationTurret.h  Frigate.cpp  Frigate.h  Mine.cpp  Mine.h  Turret.cpp  Turret.h  Unit.cpp  Unit.h
